[gd_scene load_steps=6 format=3 uid="uid://c3f4r2bt62f4a"]

[ext_resource type="Script" uid="uid://b6mvcmabaput1" path="res://Scripts/UI/dialogue.gd" id="1_f8kjv"]
[ext_resource type="Texture2D" uid="uid://b407x54cewiex" path="res://Assets/UI/dialogue_box_9_patch.png" id="2_347mh"]
[ext_resource type="FontFile" uid="uid://gls0sfppd3l1" path="res://Assets/UI/Qapixa-5y9Pa.ttf" id="3_6k0i6"]
[ext_resource type="AudioStream" uid="uid://bmyegvwqhwmmr" path="res://Assets/Audio/FX/next_sound.wav" id="4_7v0fb"]
[ext_resource type="AudioStream" uid="uid://cy8sp4vslcwwi" path="res://Assets/Audio/FX/talk_sound.wav" id="5_u0s6f"]

[node name="Dialogue" type="Node2D"]
script = ExtResource("1_f8kjv")

[node name="DialogueUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 22.0
offset_top = 57.0
offset_right = 202.0
offset_bottom = 177.0

[node name="DialogueBox" type="NinePatchRect" parent="DialogueUI"]
layout_mode = 0
offset_left = -24.0
offset_top = 47.0
offset_right = 300.0
offset_bottom = 127.0
texture = ExtResource("2_347mh")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="DialogueText" type="RichTextLabel" parent="DialogueUI"]
layout_mode = 0
offset_left = -5.0
offset_top = 66.0
offset_right = 281.0
offset_bottom = 110.0
theme_override_constants/line_separation = 5
theme_override_fonts/normal_font = ExtResource("3_6k0i6")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
scroll_active = false

[node name="Title" type="Control" parent="DialogueUI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleCard" type="NinePatchRect" parent="DialogueUI/Title"]
layout_mode = 0
offset_left = -24.0
offset_top = 25.0
offset_right = 111.0
offset_bottom = 60.0
texture = ExtResource("2_347mh")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="TitleCardText" type="RichTextLabel" parent="DialogueUI/Title"]
layout_mode = 0
offset_left = -8.0
offset_top = 38.0
offset_right = 92.0
offset_bottom = 47.0
theme_override_fonts/normal_font = ExtResource("3_6k0i6")
theme_override_font_sizes/normal_font_size = 9
bbcode_enabled = true
scroll_active = false

[node name="Sounds" type="Node2D" parent="."]

[node name="TalkSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_u0s6f")

[node name="NextSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_7v0fb")
